--- a/projetos/projeto_02.ipynb
+++ b/projetos/projeto_02.ipynb
@@ -529,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como podemos notar também, a soma de cada uma das linhas da matriz de transição é 1, confirmando uma das propriedades fundamentais da cadeia de Markov."
+    "Como podemos notar também, a soma de cada uma das linhas da matriz de transição é 1, confirmando uma das propriedades fundamentais da cadeia de Markov, garantindo que o estágio transita para algum estágio válido dentro do espaço de estados."
    ]
   },
   {
@@ -550,11 +550,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Resolução\n",
+    "\n",
     "Dada a variável aleatória $(X_t)\\;\\;\\forall\\;t\\in Z\\geq 0$, vamos realizar uma simulação da cadeia de Markov.\n",
     "\n",
     "Teremos um estágio inicial para o jogador, denotado por $v_i$, para o qual iremos simular o lançamento dos dois dados e as possíveis posições ao longo do tempo.\n",
     "\n",
-    "Nesse sentido, vamos considerar o vetor $v_i$ como sendo o conjunto da posição do jogador estar em uma casa $j$ no momento inicial do jogo, ou seja, $t_i=0$. Portanto, vamos ter:"
+    "Nesse sentido, vamos considerar o vetor $v_i$ como sendo o conjunto abaixo:\n",
+    "\n",
+    "- Casa atual do jogador no tabuleiro $(0 \\to 19)$.\n",
+    "\n",
+    "- Estágio de suspeito $(0 \\to 2)$\n",
+    "\n",
+    "- Quantidade de rodadas até ser liberado, começando em $3$ e decrementando até $0$.\n",
+    "\n",
+    "Nesse sentido, vamos simular o lançamento de um par de dados por meio da geração de um par de números \"aleatórios\" contidos no intervalo de $1$ a $6$ e incrementando os diferentes estágios e posições do jogador de acordo."
    ]
   },
   {
@@ -573,14 +583,17 @@
    "source": [
     "import random as rd\n",
     "\n",
+    "\n",
+    "# Função que rola os dados de uma partida e retorna os 2 lançamentos.\n",
     "def joga_dados():\n",
-    "    # Função que rola os dados de uma partida e retorna os 2 lançamentos.\n",
     "    return rd.randint(1, 6), rd.randint(1, 6)\n",
     "\n",
+    "\n",
+    "# Função para retornar o estado do jogador como string\n",
     "def estado_suspeito(status_suspeito):\n",
-    "    # Função para retornar o estado do jogador como string\n",
     "    estados = [\"Normal\", \"Suspeito 1\", \"Suspeito 2\", \"Preso\"]\n",
     "    return estados[status_suspeito]\n",
+    "\n",
     "\n",
     "def jogo(n_repeticoes):\n",
     "    \"\"\"\n",
@@ -642,81 +655,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resolução\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[134, 322, 1332, 132, 118, 126, 22, 193, 88, 135, 96, 202, 199, 202, 290, 383, 469, 12, 158, 416]\n",
-      "Média de passos até a primeira prisão: 255.549\n"
+      "Média de passos até a primeira prisão: 255.9641\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
     "\n",
-    "num_casas = 20\n",
-    "num_iteracoes = 10000\n",
+    "# Estamos reutilizando as funções `joga_dados()` e `estado_suspeito()`\n",
     "\n",
-    "def rolar_dados():\n",
-    "    return np.random.randint(1, 7, size=2)\n",
-    "\n",
-    "def simular_ate_primeira_prisao():\n",
-    "    estado = (0, 0, 0)  # (posição, estágio, rodadas na prisão)\n",
+    "def jogo_ate_primeira_prisao():\n",
+    "    \"\"\"\n",
+    "    Função que administra o jogo Banco Imobiliário até a primeira prisão do jogador.\n",
+    "    Retorna o número de passos dados até a primeira prisão.\n",
+    "    \"\"\"\n",
+    "    xt = [(0, \"Normal\")]  # Posição inicial e estado inicial (Normal)\n",
+    "    status_suspeito = 0\n",
     "    passos = 0\n",
     "\n",
     "    while True:\n",
-    "        posicao, estagio, prisao = estado\n",
-    "        dados = rolar_dados()\n",
+    "        dado1, dado2 = joga_dados()\n",
+    "        pos_atual, _ = xt[-1]\n",
     "        passos += 1\n",
-    "        \n",
-    "        if prisao > 0:\n",
-    "            # # Jogador está na prisão\n",
-    "            # if dados[0] == dados[1]:\n",
-    "            #     # Solto se obtiver valores iguais\n",
-    "            #     prisao = 0\n",
-    "            #     estagio = 0\n",
-    "            # else:\n",
-    "            #     # Continua preso\n",
-    "            #     prisao -= 1\n",
-    "            # posicao = 10  # Fica na casa 10 enquanto está preso\n",
-    "            pass\n",
-    "        else:\n",
-    "            # Verificar se deve ir para a prisão\n",
-    "            if estagio == 2 and dados[0] == dados[1]:\n",
-    "                return passos  # Jogador vai para a prisão pela primeira vez\n",
+    "\n",
+    "        if dado1 == dado2:\n",
+    "            status_suspeito += 1\n",
+    "            if status_suspeito == 3:  # Preso após três lançamentos iguais consecutivos\n",
+    "                xt.append((10, \"Preso\"))\n",
+    "                break  # Termina a simulação ao ser preso\n",
     "            else:\n",
-    "                # Atualizar posição no tabuleiro\n",
-    "                posicao = (posicao + sum(dados)) % num_casas\n",
-    "                \n",
-    "                # Verificar o estágio de suspeito\n",
-    "                if dados[0] == dados[1]:\n",
-    "                    estagio += 1\n",
-    "                else:\n",
-    "                    estagio = 0\n",
+    "                xt.append(((pos_atual + dado1 + dado2) % 20, estado_suspeito(status_suspeito)))\n",
+    "        else:\n",
+    "            xt.append(((pos_atual + dado1 + dado2) % 20, \"Normal\"))\n",
+    "            status_suspeito = 0  # Reseta o status de suspeito se não tirar números iguais\n",
     "\n",
-    "        # Atualizar o estado\n",
-    "        estado = (posicao, estagio, prisao)\n",
+    "    return passos\n",
     "\n",
-    "def realizar_experimentos(k):\n",
-    "    resultados = []\n",
-    "    for _ in range(k):\n",
-    "        passos_ate_primeira_prisao = simular_ate_primeira_prisao()\n",
-    "        resultados.append(passos_ate_primeira_prisao)\n",
-    "    return resultados\n",
+    "def media_passos_ate_primeira_prisao(n_simulacoes):\n",
+    "    \"\"\"\n",
+    "    Função que calcula a média de passos até a primeira prisão, através de múltiplas simulações.\n",
+    "    \"\"\"\n",
+    "    total_passos = 0\n",
     "\n",
-    "# Número de experimentos\n",
-    "k = 1000\n",
+    "    for _ in range(n_simulacoes):\n",
+    "        total_passos += jogo_ate_primeira_prisao()\n",
     "\n",
-    "# Realizar os experimentos\n",
-    "resultados_experimentos = realizar_experimentos(k)\n",
+    "    return total_passos / n_simulacoes\n",
     "\n",
-    "# Exibir os resultados dos primeiros experimentos\n",
-    "print(resultados_experimentos[:20])\n",
-    "print(f\"Média de passos até a primeira prisão: {np.mean(resultados_experimentos)}\")\n"
+    "# Executa a simulação com 10.000 iterações\n",
+    "n_simulacoes = 10000\n",
+    "media_passos = media_passos_ate_primeira_prisao(n_simulacoes)\n",
+    "print(f\"Média de passos até a primeira prisão: {media_passos}\")"
    ]
   },
   {
@@ -729,7 +733,36 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "O procedimento realizado no item c) para estimar o valor esperado de \\( Y \\), que representa a quantidade de passos até a primeira prisão, é fundamentado no conceito de média de amostras obtidas por simulações da cadeia de Markov. Vamos justificar matematicamente por que esse procedimento funciona para aproximar o valor esperado de \\( Y \\).\n",
+    "\n",
+    "### Resolução\n",
+    "\n",
+    "1. Definição de \\( Y \\):\n",
+    "   - \\( Y \\) é a variável aleatória que representa o número de passos até a primeira prisão na cadeia de Markov.\n",
+    "\n",
+    "2. Esperança de \\( Y \\):\n",
+    "   - A esperança de \\( Y \\), denotada por \\( \\mathbb{E}[Y] \\), é o valor médio de \\( Y \\) ao longo de múltiplas simulações da cadeia de Markov.\n",
+    "\n",
+    "3. Simulações da Cadeia de Markov:\n",
+    "   - Utilizamos o algoritmo para simular a cadeia de Markov e contamos os passos até a primeira prisão em cada simulação.\n",
+    "\n",
+    "4. Lei dos Grandes Números:\n",
+    "   - A Lei dos Grandes Números afirma que, à medida que o número de simulações aumenta, a média dos resultados das simulações converge para o valor esperado da variável aleatória em questão, desde que as simulações sejam independentes e tenham distribuição idêntica.\n",
+    "\n",
+    "5. Aplicação na Estimação de \\( \\mathbb{E}[Y] \\):\n",
+    "   - No procedimento descrito no item c), realizamos um número grande de simulações da cadeia de Markov (denotado por `num_rodadas`).\n",
+    "   - Em cada simulação, calculamos o número de passos até a primeira prisão e armazenamos esses valores.\n",
+    "   - A média desses valores é então calculada para obter a estimativa do valor esperado de \\( Y \\).\n",
+    "\n",
+    "6. Convergência para \\( \\mathbb{E}[Y] \\):\n",
+    "   - Pela Lei dos Grandes Números, à medida que num_simulations tende ao infinito, a média dos valores obtidos nas simulações converge para \\( \\mathbb{E}[Y] \\).\n",
+    "   - Portanto, o procedimento de estimar \\( \\mathbb{E}[Y] \\) por simulações sucessivas da cadeia de Markov é válido e eficaz para aproximar o valor esperado de \\( Y \\).\n",
+    "\n",
+    "### Conclusão:\n",
+    "\n",
+    "O procedimento funciona porque as simulações repetidas da cadeia de Markov fornecem uma amostra dos valores possíveis de \\( Y \\). Ao calcular a média desses valores, estamos usando a propriedade estatística de que a média amostral converge para a esperança da variável aleatória quando o número de observações (simulações) é grande o suficiente. Dessa forma, podemos confiar na estimativa obtida através das simulações para aproximar o valor esperado de \\( Y \\)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -739,8 +772,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
