add: Adição dos enunciados dos itens da Questão 01

--- a/projetos/projeto_02.ipynb
+++ b/projetos/projeto_02.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "- O jogador fica caminhando no tabuleiro indefinidamente de acordo com tais regras.\n",
     "\n",
-    "Com base nisso, faça o que se pede abaixo:\n"
+    "Com base nisso, faça o que se pede abaixo:"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "\n",
     "- Últimas 20 linhas e segundas 20 colunas: Jogador é preso pela primeira vez, especificamente na coluna $30$, isto é, que corresponde ao índice $10$ nas segundas colunas.\n",
     "\n",
-    "- Últimas 20 linhas e terceiras 20 colunas: Não atribuímos nenhum significado a esse campo e, portanto, deixamos vazio."
+    "- Últimas 20 linhas e terceiras 20 colunas: Não atribuímos nenhum significado a esse campo e, portanto, deixamos vazio (estado morto)."
    ]
   },
   {
@@ -223,12 +223,13 @@
     "    house = i - 40\n",
     "    for roll, prob in probabilidades_diferentes.items():\n",
     "        P[i, next_house(house, roll)] += prob\n",
+    "    # Transição para o estágio preso\n",
     "    P[i, 30] = 1/6\n",
     "    \n",
     "# Exibição da matriz\n",
     "np.set_printoptions(precision=3, suppress=True)\n",
     "print(P)\n",
-    "\n",
+    "# Verificação da soma das probabilidades de transição\n",
     "print(P.sum(axis=1))"
    ]
   },
@@ -261,15 +262,15 @@
     "\n",
     "Dada a variável aleatória $(X_t)\\;\\;\\forall\\;t\\in Z\\geq 0$, vamos realizar uma simulação da cadeia de Markov.\n",
     "\n",
-    "Teremos um estágio inicial para o jogador, denotado por $v_i$, para o qual iremos simular o lançamento dos dois dados e as possíveis posições ao longo do tempo.\n",
+    "Teremos um estágio inicial para o jogador, denotado por `status_jogador`, para o qual iremos simular o lançamento dos dois dados e as possíveis posições ao longo do tempo.\n",
     "\n",
-    "Nesse sentido, vamos considerar o vetor $v_i$ como sendo o conjunto abaixo:\n",
+    "Nesse sentido, vamos considerar o vetor `status_jogador` como sendo o conjunto abaixo:\n",
     "\n",
     "- Casa atual do jogador no tabuleiro $(0 \\to 19)$.\n",
     "\n",
     "- Estágio de suspeito $(0 \\to 2)$\n",
     "\n",
-    "- Quantidade de rodadas até ser liberado, começando em $3$ e decrementando até $0$.\n",
+    "- Rodada atual do jogador $(0 \\to \\infty)$\n",
     "\n",
     "Nesse sentido, vamos simular o lançamento de um par de dados por meio da geração de um par de números \"aleatórios\" contidos no intervalo de $1$ a $6$ e incrementando os diferentes estágios e posições do jogador de acordo."
    ]
@@ -305,20 +306,20 @@
     "    Função que administra o jogo Banco Imobiliário.\n",
     "    Recebe como parâmetro um inteiro que representa quantas iterações o jogo terá.\n",
     "    \"\"\"\n",
-    "    xt = [(0, \"Normal\", 0)]  # Posição inicial, estado inicial (Normal), e número da rodada inicial\n",
+    "    status_jogador = [(0, \"Normal\", 0)]  # Posição inicial, estado inicial (Normal), e número da rodada inicial\n",
     "    status_suspeito = 0\n",
     "    rodada = 0\n",
     "    rodada_primeira_prisao = None\n",
     "\n",
     "    while n_repeticoes:\n",
     "        dado1, dado2 = joga_dados()\n",
-    "        pos_atual, _, _ = xt[-1]\n",
+    "        pos_atual, _, _ = status_jogador[-1]\n",
     "        rodada += 1\n",
     "\n",
     "        while dado1 == dado2:\n",
     "            status_suspeito += 1\n",
     "            if status_suspeito == 3:  # Preso após três lançamentos iguais consecutivos\n",
-    "                xt.append((10, \"Preso\", rodada))\n",
+    "                status_jogador.append((10, \"Preso\", rodada))\n",
     "                if rodada_primeira_prisao is None:\n",
     "                    rodada_primeira_prisao = rodada\n",
     "                for _ in range(3):  # Três tentativas para sair da prisão\n",
@@ -326,34 +327,29 @@
     "                    rodada += 1\n",
     "                    if dado1 == dado2:  # Sai da prisão\n",
     "                        pos_atual = 10\n",
-    "                        xt.append(((pos_atual + dado1 + dado2) % 20, \"Normal\", rodada))\n",
+    "                        status_jogador.append(((pos_atual + dado1 + dado2) % 20, \"Normal\", rodada))\n",
     "                        break\n",
     "                    else:\n",
-    "                        xt.append((10, \"Preso\", rodada))  # Continua na prisão\n",
+    "                        status_jogador.append((10, \"Preso\", rodada))  # Continua na prisão\n",
     "                status_suspeito = 0  # Reseta o status de suspeito após sair ou cumprir as rodadas na prisão\n",
     "                break\n",
     "            else:\n",
-    "                xt.append((pos_atual, estado_suspeito(status_suspeito), rodada))\n",
+    "                status_jogador.append((pos_atual, estado_suspeito(status_suspeito), rodada))\n",
     "                dado1, dado2 = joga_dados()  # Rolar novamente os dados\n",
     "        \n",
     "        if status_suspeito < 3:\n",
-    "            xt.append(((pos_atual + dado1 + dado2) % 20, \"Normal\", rodada))\n",
+    "            status_jogador.append(((pos_atual + dado1 + dado2) % 20, \"Normal\", rodada))\n",
     "            status_suspeito = 0  # Reseta o status de suspeito se não tirar números iguais\n",
     "\n",
     "        n_repeticoes -= 1\n",
     "\n",
-    "    return xt, rodada_primeira_prisao\n",
+    "    return status_jogador, rodada_primeira_prisao\n",
     "\n",
     "\n",
     "n_repeticoes = 10000\n",
     "resultados, rodada_primeira = jogo(n_repeticoes)\n",
     "print(f\"resultados: {resultados[:100]}\\n rodada: {rodada_primeira}\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -412,6 +408,35 @@
     "n_experimentos = 10000\n",
     "media_rodada_primeira_prisao = media_primeira_prisao(n_experimentos, n_repeticoes)\n",
     "print(f\"Média da rodada da primeira prisão: {media_rodada_primeira_prisao}\")"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "O procedimento para obter uma aproximação do valor esperado de $Y$, que representa a quantidade de passos até a primeira prisão, foi realizado da seguinte forma:\n",
+    "\n",
+    "A função `media_primeira_prisao(n_experimentos, n_repeticoes)` foi utilizada para calcular a média da rodada da primeira prisão em múltiplos experimentos.\n",
+    "\n",
+    "Com múltiplos testes, nosso valor esperado de $Y$ tende a $216$, ficando sempre bem próximo desse valor.\n",
+    "\n",
+    "O procedimento detalhado foi o seguinte:\n",
+    "\n",
+    "1. **Definição dos Parâmetros**:\n",
+    "- `n_experimentos`: Número de experimentos a serem realizados para estimar a média da rodada da primeira prisão.\n",
+    "- `n_repeticoes`: Número de repetições em cada experimento para simular a cadeia de Markov.\n",
+    "- `media_primeira_prisao(n_experimentos, n_repeticoes)`: Função que calcula a média da rodada da primeira prisão em múltiplos experimentos.\n",
+    "\n",
+    "2. **Simulação dos Experimentos**:\n",
+    "- Para cada experimento, a função `jogo(n_repeticoes)` é chamada para simular a cadeia de Markov e obter a rodada da primeira prisão.\n",
+    "- Se a rodada da primeira prisão for válida (diferente de `None`), a soma das rodadas é atualizada e o contador de rodadas válidas é incrementado.\n",
+    "- Caso contrário, o experimento é ignorado.\n",
+    "\n",
+    "3. **Cálculo da Média da Primeira Prisão**\n",
+    "- Após todos os experimentos, a média das rodadas da primeira prisão é calculada dividindo a soma das rodadas válidas pelo número de rodadas válidas.\n",
+    "\n",
+    "4. **Resultado**\n",
+    "- O valor médio da rodada da primeira prisão foi calculado e exibido como uma aproximação do valor esperado de $Y$, sendo aproximadamente 216."
    ]
   },
   {
@@ -475,9 +500,55 @@
     "- Pela Lei dos Grandes Números, à medida que `n_experimentos` tende ao infinito, a média dos valores obtidos nas simulações converge para $\\mathbb{E}[Y]$.\n",
     "- Portanto, o procedimento de estimar $\\mathbb{E}[Y]$ por simulações sucessivas da cadeia de Markov é válido e eficaz para aproximar o valor esperado de $Y$.\n",
     "\n",
+    "### Explicação da Lógica por Trás do Resultado da Média de 216 Rodadas Até o Jogador Ir Para a Prisão Pela Primeira Vez\n",
+    "\n",
+    "Para entender a lógica por trás do resultado de 216 rodadas em média até que o jogador vá para a prisão pela primeira vez, precisamos considerar as regras do jogo e a forma como a cadeia de Markov foi modelada. Analisando de forma detalhada, obtivemos:\n",
+    "\n",
+    "#### Regras do Jogo\n",
+    "1. Movimentação no Tabuleiro:\n",
+    "   - O jogador rola dois dados e move-se pela soma dos valores dos dados.\n",
+    "   - As probabilidades de rolar diferentes somas são baseadas nas combinações possíveis dos dois dados.\n",
+    "\n",
+    "2. Estágio de Suspeito:\n",
+    "   - Se o jogador rolar números iguais (doubles), ele avança para o próximo estágio de suspeito.\n",
+    "   - Existem três estágios de suspeito: Normal, Suspeito 1, Suspeito 2.\n",
+    "   - Se o jogador rolar números iguais três vezes consecutivas, ele é preso.\n",
+    "\n",
+    "3. Prisão:\n",
+    "   - Quando o jogador é preso, ele vai para a casa da prisão e permanece lá por três rodadas ou até rolar números iguais novamente.\n",
+    "\n",
+    "#### Probabilidade de Ser Preso\n",
+    "Para ser preso, o jogador precisa rolar números iguais três vezes consecutivas. A probabilidade de prisão é dada por:\n",
+    "\n",
+    "1. Probabilidade de Rolar Números Iguais (Doubles):\n",
+    "   - A probabilidade de rolar doubles em um lançamento de dois dados é $\\frac{6}{36} = \\frac{1}{6}$.\n",
+    "\n",
+    "2. Probabilidade de Rolar \"Doubles\" Três Vezes Consecutivas:\n",
+    "   - A probabilidade de rolar doubles três vezes consecutivas é $\\left(\\frac{1}{6}\\right)^3 = \\frac{1}{216}$.\n",
+    "\n",
+    "Isso significa que, em média, a cada 216 lançamentos de dados, o jogador deve esperar rolar \"doubles\" três vezes consecutivas uma vez e ser preso.\n",
+    "\n",
+    "#### Cálculo da Média de Rodadas\n",
+    "Dado que a probabilidade de ser preso (rolar doubles três vezes consecutivas) é $\\frac{1}{216}$, podemos esperar que o jogador será preso, em média, uma vez a cada 216 rodadas. Essa média é uma consequência direta da probabilidade cumulativa de eventos raros em uma cadeia de Markov.\n",
+    "\n",
+    "1. Expectativa Matemática:\n",
+    "   - Em uma cadeia de Markov, se um evento tem uma probabilidade $p$ de ocorrer em cada rodada, o número esperado de rodadas até o evento ocorrer é $\\frac{1}{p}$.\n",
+    "   - Aqui, $p = \\frac{1}{216}$.\n",
+    "   - Portanto, o número esperado de rodadas até que o jogador vá para a prisão pela primeira vez é $\\frac{1}{\\frac{1}{216}} = 216$ rodadas.\n",
+    "\n",
+    "#### Considerações Finais\n",
+    "\n",
+    "1. Distribuição Geométrica:\n",
+    "   - Este resultado pode ser interpretado através da distribuição geométrica, onde o número de tentativas até o primeiro sucesso (prisão) é inversamente proporcional à probabilidade de sucesso em cada tentativa.\n",
+    "\n",
+    "2. Validação por Simulação:\n",
+    "   - Este valor de 216 rodadas pode ser validado através de simulações, como fizemos anteriormente no código, onde várias simulações independentes foram realizadas para observar a média de rodadas até a primeira prisão.\n",
+    "\n",
     "### Conclusão\n",
     "\n",
-    "O procedimento funciona porque as simulações repetidas da cadeia de Markov fornecem uma amostra dos valores possíveis de $Y$. Ao calcular a média desses valores, estamos usando a propriedade estatística de que a média amostral converge para a esperança da variável aleatória quando o número de observações (simulações) é grande o suficiente. Dessa forma, podemos confiar na estimativa obtida através das simulações para aproximar o valor esperado de $Y$."
+    "A média de 216 rodadas até que o jogador vá para a prisão pela primeira vez é derivada da baixa probabilidade de rolar doubles três vezes consecutivas. Esse resultado é consistente com a expectativa matemática para eventos raros em uma cadeia de Markov. A simulação confirma que, em um grande número de jogos, essa média se mantém estável, proporcionando uma visão estatisticamente sólida do comportamento esperado do jogador no jogo.\n",
+    "\n",
+    "Finalmente, concluímos que o procedimento funciona porque as simulações repetidas da cadeia de Markov fornecem uma amostra dos valores possíveis de $Y$. Ao calcular a média desses valores, estamos usando a propriedade estatística de que a média amostral converge para a esperança da variável aleatória quando o número de observações (simulações) é grande o suficiente. Dessa forma, podemos confiar na estimativa obtida através das simulações para aproximar o valor esperado de $Y$."
    ]
   },
   {
@@ -492,7 +563,26 @@
    "metadata": {},
    "source": [
     "### Resolução\n",
-    "\n"
+    "\n",
+    "Primeiramente, a função massa de probabilidade (fmp) que desejamos obter corresponde à distribuição estacionária da cadeia de Markov que descreve o jogo. Portanto, essa distribuição nos dá informação com respeito à probabilidade do jogador estar em cada uma das casas após um número infinito de jogadas.\n",
+    "\n",
+    "#### Cálculo da Distribuição Estacionária\n",
+    "\n",
+    "A distribuição é calculada por meio da resolução do sistema $\\pi P = \\pi$. De modo que empregamos os autovalores e autovetores da matriz de transição para encontrar o vetor estacionário desejado.\n",
+    "\n",
+    "Nesse sentido, a distribuição estacionária para as 20 casas é obtida por meio da soma da probabilidade dos estados correspondentes aos três estágios de suspeito. Então vamos enumerar o passo-a-passo:\n",
+    "\n",
+    "1. Determinar os autovalores e autovetores da matriz de transição $P$.\n",
+    "\n",
+    "2. Encontrar o autovetor associado ao autovalor $1$, em função da distribuição estacionária.\n",
+    "\n",
+    "3. Normalizar o autovetor calculado acima e obter a sua primeira coluna.\n",
+    "\n",
+    "4. Combinação das probabilidades entre cada um dos estágios possíveis do jogo, isto é, $(0 \\to 19)$, $(20 \\to 39)$ e $(40 \\to 59)$.\n",
+    "\n",
+    "5. Encontrar o índice da casa com maior probabilidade $(\\text{casa } 10)$ do jogador passar a maior quantidade de tempo.\n",
+    "\n",
+    "6. Por fim, exibimos a casa onde o jogador passa mais tempo e sua probabilidade associada."
    ]
   },
   {
